terraform/plan/s3-best-practices/enable-kms-encryption/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../enable-kms-encryption.yaml --payload ./good-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: s3-enable-kms-encryption
                rules:
                - rule:
                    name: check-encryption-setting
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../enable-kms-encryption.yaml --payload ./bad-payload-01.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: s3-enable-kms-encryption
                rules:
                - rule:
                    name: check-encryption-setting
                  error: ~
                  violations:
                  - message: S3 server side encryption is not set to KMS (CHECK=spec.rules[0].assert.all[1])
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../enable-kms-encryption.yaml --payload ./bad-payload-02.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: s3-enable-kms-encryption
                rules:
                - rule:
                    name: check-encryption-setting
                  error: ~
                  violations:
                  - message: S3 server side encryption is not set to KMS (CHECK=spec.rules[0].assert.all[1])
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-03
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../enable-kms-encryption.yaml --payload ./bad-payload-03.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: s3-enable-kms-encryption
                rules:
                - rule:
                    name: check-encryption-setting
                  error: ~
                  violations:
                  - message: Use the `aws_s3_bucket_server_side_encryption_configuration ` resource to set the S3 server side encryption to KMS (CHECK=spec.rules[0].assert.all[0])
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
